// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ask users if they want to submit article when user say not found 1`] = `
Object {
  "data": Object {
    "articleSources": Array [
      "親戚轉傳",
      "同事轉傳",
      "朋友轉傳",
      "自己輸入的",
    ],
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這一篇文章確實是一個轉傳文章，他夠長，看起來很轉傳，但是使用者覺得資料庫裡沒有。",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "altText": "啊，看來您的訊息還沒有收錄到我們的資料庫裡。

請問您是從哪裡看到這則訊息呢？

親戚轉傳 > 請傳 1
同事轉傳 > 請傳 2
朋友轉傳 > 請傳 3
自己輸入的 > 請傳 4

請按左下角「⌨️」鈕輸入選項編號。",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":1,\\"issuedAt\\":1511633232970}",
            "label": "親戚轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":2,\\"issuedAt\\":1511633232970}",
            "label": "同事轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":3,\\"issuedAt\\":1511633232970}",
            "label": "朋友轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":4,\\"issuedAt\\":1511633232970}",
            "label": "自己輸入的",
            "type": "postback",
          },
        ],
        "text": "啊，看來您的訊息還沒有收錄到我們的資料庫裡。
請問您是從哪裡看到這則訊息呢？",
        "type": "buttons",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_ARTICLE_SOURCE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should ask users to re-enter a valid number if an invalid number is received 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "searchedText": "Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "10",
    "message": Object {
      "id": "7049700770815",
      "text": "10",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "text": "請輸入 1～1 的數字，來選擇訊息。",
      "type": "text",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should block user from submitting articles that is too short 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這真的假的？？！！！？？！",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "剛才您傳的訊息資訊量太少，編輯無從查證。
查證範圍請參考📖使用手冊 http://bit.ly/cofacts-line-users",
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and have OPINIONATED and NOT_ARTICLE replies 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
      "AV8fXikZyCdS-nWhuhfN",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "Volunteer editors has publised several replies to this message.

👨‍👩‍👧‍👦 1 of them say it ❌ contains misinformation, 1 of them says it 💬 contains personal perspective
, 2 of them says it ⚠️️ is out of scope of Cofacts
.",
      "type": "text",
    },
    Object {
      "text": "Let's pick one 👇",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> Contains misinformation
[3 users consider this helpful]
老榮民有住所，有月退俸，也不需要特別的醫療護理，因此較適合榮民之

閱讀請傳 2> Contains personal perspective
[No feedback yet]
慈濟自來有褒有貶，每人有各自的看法。

閱讀請傳 3> Invalid request
[No feedback yet]
整個基督教徒的打手，自己不努力去牧人、募款，利用攻擊別人，三分真七分假，更利用多帳號來造勢及造風向，害我也差

閱讀請傳 4> Invalid request
[No feedback yet]
文章是假的 照片也是盜用我方家人的照片,嚴重影響我家人名譽,我方已對po文的人聯絡並打算提出告訴,請勿相信謠",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[3 users consider this helpful]
老榮民有住所，有月退俸，也不需要特別的醫療護理，因此較適合榮民之家養老，慈濟也一直關懷陪伴。護理之家有免費方案，入住資格和有無捐款沒有關係。
慈善機構使用資源需",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains personal perspective
[No feedback yet]
慈濟自來有褒有貶，每人有各自的看法。",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":3,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Invalid request
[No feedback yet]
整個基督教徒的打手，自己不努力去牧人、募款，利用攻擊別人，三分真七分假，更利用多帳號來造勢及造風向，害我也差點相信了，各位有智慧的看官，看過之後，笑一笑即可，別",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":4,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Invalid request
[No feedback yet]
文章是假的 照片也是盜用我方家人的照片,嚴重影響我家人名譽,我方已對po文的人聯絡並打算提出告訴,請勿相信謠言.",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and slice replies when over 10 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV8fXikZyCdS-nWhuhfN",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "eleven Replies article text",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "Volunteer editors has publised several replies to this message.

👨‍👩‍👧‍👦 6 of them say it ❌ contains misinformation, 2 of them says it ⭕ contains true information, 1 of them says it 💬 contains personal perspective
, 2 of them says it ⚠️️ is out of scope of Cofacts
.",
      "type": "text",
    },
    Object {
      "text": "Let's pick one 👇",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> Contains misinformation
[No feedback yet]


閱讀請傳 2> Contains misinformation
[No feedback yet]


閱讀請傳 3> Contains true information
[No feedback yet]


閱讀請傳 4> Contains true information
[No feedback yet]


閱讀請傳 5> Contains misinformation
[No feedback yet]


閱讀請傳 6> Contains misinformation
[No feedback yet]


閱讀請傳 7> Contains personal perspective
[No feedback yet]


閱讀請傳 8> Contains misinformation
[No feedback yet]


閱讀請傳 9> Contains misinformation
[No feedback yet]


閱讀請傳 10> Invalid request
[No feedback yet]
",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應1",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應2",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":3,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains true information
[No feedback yet]
回應3",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":4,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains true information
[No feedback yet]
回應4",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":5,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應5",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":6,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應6",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":7,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains personal perspective
[No feedback yet]
回應9",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":8,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應10",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":9,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[No feedback yet]
回應11",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":10,\\"issuedAt\\":1511633232970}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Invalid request
[No feedback yet]
回應7。
",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
    Object {
      "text": "Visit https://cofacts.hacktabl.org/article/AV8d2-YtyCdS-nWhuhdi for more replies.",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article by articleId 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVyyB61NyCdS-nWhuakC",
      "AV4sEcSHyCdS-nWhufEX",
      "5478658696099-rumor",
    ],
    "foundReplyIds": Array [
      "AVygFA0RyCdS-nWhuaXY",
      "AVy6LkWIyCdS-nWhuaqu",
    ],
    "searchedText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
    "selectedArticleId": "AVyyB61NyCdS-nWhuakC",
    "selectedArticleText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "6691804381697",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1505314293406,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1505314295017,
  "replies": Array [
    Object {
      "text": "Volunteer editors has publised several replies to this message.

👨‍👩‍👧‍👦 2 of them say it ❌ contains misinformation.",
      "type": "text",
    },
    Object {
      "text": "Let's pick one 👇",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> Contains misinformation
[14 users consider this helpful
2 users consider this not useful]
查證這則謠言的過程中，約翰走鹿也發現其實網路早就有許多解答，就讓約翰走鹿來借花獻佛一下囉。多家媒體都有針對這則「吃生魚片會有海獸胃腺蟲附著胃壁」的謠言請教醫師，受訪的醫師們皆表示，這則謠言太誇大，

閱讀請傳 2> Contains misinformation
[24 users consider this helpful]
過去台灣只有一個海獸胃腺蟲鑽入胃壁的病例，而且僅有一隻蟲。而經查詢，台北馬偕醫院也沒有名為林清風的醫師。",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1505314295017}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[14 users consider this helpful
2 users consider this not useful]
查證這則謠言的過程中，約翰走鹿也發現其實網路早就有許多解答，就讓約翰走鹿來借花獻佛一下囉。多家媒體都有針對這則「吃生魚片會有海獸胃腺蟲附著胃壁」的謠言請教醫師，",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1505314295017}",
                "label": "👀 Take a look",
                "type": "postback",
              },
            ],
            "text": "Contains misinformation
[24 users consider this helpful]
過去台灣只有一個海獸胃腺蟲鑽入胃壁的病例，而且僅有一隻蟲。而經查詢，台北馬偕醫院也沒有名為林清風的醫師。",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article with just one reply 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
    ],
    "searchedText": "Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply",
    "selectedArticleId": "AV_4WX8vyCdS-nWhujyH",
    "selectedArticleText": "Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply Just One Reply ",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "7049700770815",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "text": "Volunteer editors has publised several replies to this message.

👨‍👩‍👧‍👦 1 of them say it ❌ contains misinformation.",
      "type": "text",
    },
    Object {
      "text": "Let's pick one 👇",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article with no replies 1`] = `
Object {
  "data": Object {
    "articleSources": Array [
      "親戚轉傳",
      "同事轉傳",
      "朋友轉傳",
      "自己輸入的",
    ],
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "searchedText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
    "selectedArticleId": "AV_4WX8vyCdS-nWhujyH",
    "selectedArticleText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7049700770815",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "altText": "抱歉這篇訊息還沒有人回應過唷！

請問您是從哪裡看到這則訊息呢？

親戚轉傳 > 請傳 1
同事轉傳 > 請傳 2
朋友轉傳 > 請傳 3
自己輸入的 > 請傳 4

請按左下角「⌨️」鈕輸入選項編號。",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":1,\\"issuedAt\\":1511702208730}",
            "label": "親戚轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":2,\\"issuedAt\\":1511702208730}",
            "label": "同事轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":3,\\"issuedAt\\":1511702208730}",
            "label": "朋友轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":4,\\"issuedAt\\":1511702208730}",
            "label": "自己輸入的",
            "type": "postback",
          },
        ],
        "text": "抱歉這篇訊息還沒有人回應過唷！
請問您是從哪裡看到這則訊息呢？",
        "type": "buttons",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_ARTICLE_SOURCE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
